--- a/source/sass/blocks/live-israel.scss
+++ b/source/sass/blocks/live-israel.scss
@@ -1,4 +1,5 @@
 .live-israel {
+  padding-top: 80px;
   padding-bottom: 56px;
   background-color: #ffffff;
   color: #000000;
@@ -6,20 +7,14 @@
     url("../../img/live-israel-Bg-desktop@1x.jpg");
   background-repeat: no-repeat,
     no-repeat;
-  background-position: 1276px 612px,
-    50% 85%;
+  background-position: 103% 693px,
+    50% 128%;
   background-size: 124px 148px,
-    cover;
+    contain;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../../img/watch-desktop@1x.png"),
       url("../../img/live-israel-Bg-desktop@2x.jpg");
-    background-repeat: no-repeat,
-      no-repeat;
-    background-position: 1276px 612px,
-      50% 85%;
-    background-size: 124px 148px,
-      cover;
   }
 }
 
@@ -194,7 +189,7 @@
     padding-left: 16px;
     padding-right: 16px;
     padding-bottom: 79px;
-    padding-top: 0;
+    padding-top: 30px;
     background: none;
     overflow: hidden;
 
