исправлет проблему отображения логотипа в мобильной версии

--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -80,6 +80,10 @@
     align-items: center;
   }
 
+  .page-footer__logo {
+    margin-right: 0;
+  }
+
   .page-footer img {
     margin-right: 0;
     margin-bottom: 13px;
