--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -15,22 +15,20 @@
 .intro {
   padding-top: 439px;
   padding-bottom: 200px;
-  background: url("../../img/hint-scroll-down-desktop@1x.png") 50% 528px no-repeat,
-    url("../../img/girl-desktop@1x.png") 50% -100px no-repeat,
+  background: url("../../img/girl-desktop@1x.png") 50% -100px no-repeat,
     url("../../img/israel-desktop@1x.png") 50% 60px no-repeat;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background: url("../../img/hint-scroll-down-desktop@1x.png") 50% 528px no-repeat,
-      url("../../img/girl-desktop@2x.png") 50% -100px no-repeat,
+    background: url("../../img/girl-desktop@2x.png") 50% -100px no-repeat,
       url("../../img/israel-desktop@2x.png") 50% 60px no-repeat;
-    background-size: 77px 132px,
-      1366px 906px,
+    background-size: 1366px 906px,
       1018px 340px;
   }
 }
 
 .intro h2 {
   margin: 0 auto;
+  margin-bottom: 31px;
   padding: 0;
   font-family: "Fira Sans", "Arial", sans-serif;
   font-size: 24px;
@@ -39,6 +37,22 @@
   text-align: center;
   max-width: 350px;
   text-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
+}
+
+.intro a {
+  margin: 0 auto;
+  display: block;
+  font-size: 0;
+  line-height: 0;
+  background: url("../../img/hint-scroll-down-desktop@1x.png") no-repeat 50% 50%;
+  height: 132px;
+  width: 76px;
+  cursor: pointer;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background: url("../../img/hint-scroll-down-desktop@2x.png") no-repeat 50% 50%;
+    background-size: 76px 132px;
+  }
 }
 
 @media (max-width: $mob-width) {
@@ -57,16 +71,13 @@
   .intro {
     padding-top: 239px;
     padding-bottom: 150px;
-    background: url("../../img/hint-scroll-down-mobile@1x.png") 50% 319px no-repeat,
-      url("../../img/girl-mobile@1x.png") 50% -64px no-repeat,
+    background: url("../../img/girl-mobile@1x.png") 50% -64px no-repeat,
       url("../../img/israel-mobile@1x.png") 48% 72px no-repeat;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background: url("../../img/hint-scroll-down-mobile@1x.png") 50% 319px no-repeat,
-        url("../../img/girl-mobile@2x.png") 50% -63px no-repeat,
+      background: url("../../img/girl-mobile@2x.png") 50% -63px no-repeat,
         url("../../img/israel-mobile@2x.png") 52% 72px no-repeat;
-      background-size: 76px 132px,
-        320px 602px,
+      background-size: 320px 602px,
         347px 122px;
     }
   }
