--- a/source/sass/blocks/live-israel.scss
+++ b/source/sass/blocks/live-israel.scss
@@ -112,7 +112,7 @@
   font-family: "Raleway", "Arial", sans-serif;
   font-size: 21px;
   line-height: 25px;
-  font-weight: 800;
+  font-weight: bold;
   color: #ffffff;
   text-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
 }
