--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,16 +1,26 @@
 .page-footer {
-  padding-top: 26px;
+  padding-top: 24px;
   padding-right: 114px;
   padding-left: 110px;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   border-top: 1px solid #e3e3e3;
   background-color: #ffffff;
   color: #000000;
 }
 
 .page-footer__logo {
-  margin-right: 384px;
+  margin-right: 30px;
   cursor: pointer;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
 }
 
 .page-footer img {
@@ -23,7 +33,6 @@
 .page-footer p {
   display: block;
   margin: 0;
-  margin-right: auto;
   padding: 0;
   padding-top: 2px;
   font-family: "Fira Sans", "Arial", sans-serif;
