--- a/source/sass/blocks/modal-order-callback.scss
+++ b/source/sass/blocks/modal-order-callback.scss
@@ -53,7 +53,7 @@
   border: 2px solid #e3e3e3;
   box-sizing: border-box;
   border-radius: 80px;
-  -webkit-appearance: none;
+  appearance: none;
 
   &:focus {
     border-color: #ffd701;
