--- a/source/sass/blocks/want-go.scss
+++ b/source/sass/blocks/want-go.scss
@@ -58,7 +58,7 @@
   border-radius: 80px;
   width: 100%;
   max-width: 477px;
-  -webkit-appearance: none;
+  appearance: none;
 
   &:focus {
     border-color: #ffd701;
