--- a/source/sass/blocks/details.scss
+++ b/source/sass/blocks/details.scss
@@ -226,7 +226,7 @@
   border: 2px solid #e3e3e3;
   border-radius: 80px;
   box-sizing: border-box;
-  -webkit-appearance: none;
+  appearance: none;
 }
 
 .details__form input::placeholder {
